kubectl_deploy/api-sandbox/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: claim-for-crown-court-defence
  namespace: cccd-api-sandbox
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: cccd
    spec:
      containers:
        - name: cccd-app
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/cccd:latest
          ports:
            - containerPort: 4567
          #          livenessProbe:
          #            httpGet:
          #              path: /ping
          #              port: 80
          #          readinessProbe:
          #            httpGet:
          #              path: /healthcheck
          #              port: 4567
