kubectl_deploy/api-sandbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cccd-app-service
  namespace: cccd-api-sandbox
  labels:
    app: cccd-app-service
spec:
  ports:
    - port: 4567
      name: http
      targetPort: 3000
  selector:
    app: cccd
