kubectl_deploy/api-sandbox/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cccd-app-ingress
  namespace: cccd-api-sandbox
spec:
  rules:
    - host: cccd-api-sandbox.apps.live-1.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: cccd-app-service
              servicePort: 4567
  tls:
    - hosts:
      - cccd-api-sandbox.apps.live-1.cloud-platform.service.justice.gov.uk
